added CRS module

--- a/build.properties
+++ b/build.properties
@@ -1,9 +1,12 @@
 version=0.1
-store-prod-module.name=DafEar.Admin MyCustomProject
+#store-prod-module.name=DafEar.Admin MyCustomProject
+store-prod-module.name=Store.EStore DafEar.Admin DPS DSS ContentMgmt DCS.PublishingAgent DCS.AbandonedOrderServices ContentMgmt.Endeca.Index DCS.Endeca.Index Store.Endeca.Index DAF.Endeca.Assembler PublishingAgent DCS.Endeca.Index.SKUIndexing Store.Storefront Store.Recommendations DCS.ClickToConnect Store.Fluoroscope Store.Fulfillment Store.KnowledgeBase Store.Storefront.NoPublishing MyCustomProject
 impl-title=${ant.project.name}
 atg.root=C:\\ATG\\ATG11.1
 dynamo.home=${atg.root}/home
 build.dir=build
 classes.dir=build/classes
 #location of output ear file
-runAssembler.ear.dir=E://Ear
+#runAssembler.ear.dir=E://Ear
+runAssembler.ear.dir=C:\\ATG\\ATG11.1\\home\\cimEars
+store-pub-module.name=DCS-UI.Versioned BIZUI PubPortlet DafEar.Admin ContentMgmt.Versioned DCS.Versioned DCS-UI Store.EStore.Versioned Store.Storefront DCS-UI.SiteAdmin.Versioned SiteAdmin.Versioned ContentMgmt.Endeca.Index.Versioned DCS.Endeca.Index.Versioned Store.Endeca.Index.Versioned DCS.Endeca.Index.SKUIndexing Store.KnowledgeBase
